Fix `tree-leaf` layout when content overflows

--- a/src/views/tree-leaf.css
+++ b/src/views/tree-leaf.css
@@ -1,6 +1,11 @@
 .view-tree-leaf {
     position: relative;
     overflow: hidden;
+    display: grid;
+    grid-template-columns: 20px auto;
+    grid-template-areas:
+        "toggle content"
+        "children children";
 }
 .view-tree-leaf:not(:last-child)::before,
 .view-tree-leaf-children.incomplete > .view-tree-leaf:not(.last)::before {
@@ -13,10 +18,12 @@
 }
 
 .view-tree-leaf-toggle {
+    grid-area: toggle;
     visibility: hidden;
     display: inline-block;
     position: relative;
-    top: -1px;
+    top: 1em;
+    margin-top: -3px;
     width: 9px;
     height: 9px;
     background: white;
@@ -58,10 +65,12 @@
 }
 
 .view-tree-leaf-content {
+    grid-area: content;
     display: inline-block;
 }
 
 .view-tree-leaf-children {
+    grid-area: children;
     list-style: none;
     margin: 0;
     padding: 0;
